# HaskellBook

./: README.md
ch10/: intermission.hs  warmup.hs
ch11/: AsPatterns.hs  BinaryTreeFold.hs  BinaryTreeList.hs  BinaryTreeMap.hs  Cipher.hs  HuttonsRazor.hs  LanguageExercises.hs  Phone.hs  chapterExercises.hs  exercises.hs  intermission.hs  jammin.hs
ch12/: BinaryTree.hs  ChapterExercises.hs  NaturalNumbers.hs  SmallEitherLib.hs  SmallMaybeLib.hs  Unfolds.hs
ch13/: intermission.hs  makePerson.hs  palindrome.hs
ch13/Cipher/: Cipher.cabal
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/: Arbitrary.hs  CoArbitrary.hs  randomGenerator.hs
ch14/Addition/: Addition.cabal  Addition.hs
ch14/ArithmeticTests/: arithmetic.cabal
ch14/ArithmeticTests/src/: Arithmetic.hs
ch14/ArithmeticTests/tests/: ArithmeticTests.hs
ch14/Cipher/: Cipher.cabal
ch14/Cipher/app/: Main.hs
ch14/Cipher/src/: Cipher.hs
ch14/Cipher/tests/: CipherTests.hs
ch14/WordNumber/: WordNumber.cabal
ch14/WordNumber/src/: WordNumber.hs
ch14/WordNumber/tests/: WordNumberTest.hs
ch14/hangman/: hangman.cabal
ch14/hangman/src/: Hangman.hs  Main.hs
ch14/hangman/tests/: HangmanTests.hs
ch14/morse/: LICENSE  morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15/: First.hs  MadLibbin.hs  Optional.hs  SemiGroup.hs
ch15/chapterExercises/: Monoid.hs  SemiGroup.hs
ch15/orphan-instance/: Listy.hs
ch16/: chapterExercises.hs  exercises.hs
ch17/: ChapterExercises.hs  Constant.hs  Identity.hs  List.hs  LookUps.hs  Validation.hs  VowelsStops.hs  ZipList.hs
ch18/: ChapterExercises.hs  Either.hs  MonadFunctorFunctions.hs
ch19/shawty-prime/: LICENSE  shawty.cabal
ch19/shawty-prime/app/: Main.hs
ch20/: ChapterExercises.hs  LibraryFunctions.hs
ch21/: ChapterExercises.hs
ch22/: ShortExercise.hs  WarmUp.hs
ch23/: ChapterExercises.hs  FizzBuzz.hs  Moi.hs  ThrowDown.hs
ch3/: exc03.hs
ch4/: exc04.hs
ch5/: arith3broken.hs  exc05.hs  fixit.hs  typekwondo.hs
ch6/: DoesItTypecheck.hs  GivenDeclaration.hs  MatchTheTypes.hs  MultipleChoice.txt  TypeKwonDo.hs  intermission.hs
ch7/: arith4.hs  intermission.hs  lets_write_code.hs  multiple_choice.hs
ch8/: currying.hs  intermission.hs  multiplechoice.txt  numberintowords.hs  recursion.hs
ch9/: Cipher.hs  PoemLines.hs  chapterexc.hs  exercise.hs  intermission.hs
