name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Dorus Leliveld
maintainer:          example@example.com
copyright:           2016 Dorus Leliveld
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
