name:                WordNumber
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tclv/WordNumber#readme
license:             BSD3
license-file:        LICENSE
author:              Dorus Leliveld
maintainer:          dorusleliveld@gmail.com
copyright:           2016 Dorus Leliveld
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite WordNumberTest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             WordNumberTest.hs
  build-depends:       base
                     , hspec
                     , WordNumber
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

