name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Dorus Leliveld
maintainer:          example@example.com
copyright:           2016 Dorus Leliveld
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , hangman
                     , split
  default-language:    Haskell2010

library
  exposed-modules:     Hangman
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite tests
  main-is:             HangmanTests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , hangman
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
